@@ -1,3 +1,8 @@
+Sun Sep 12 22:51:20 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/step.c: Follow previous cpu_registers (regs.h) changes.
+	* src/session.c: Likewise.
+
 Sun Sep 12 18:59:20 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/regs.h (cpu_registers): Add FPA registers. Make union with 'raw'
